Dutch translation updated by Wouter Bolsterlee
2006-09-15  Wouter Bolsterlee  <wbolster@gnome.org>

	* nl.po: Dutch translation updated by Wouter Bolsterlee

--- a/po/nl.po
+++ b/po/nl.po
@@ -26,8 +26,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-09-15 16:17+0200\n"
-"PO-Revision-Date: 2006-09-15 16:17+0200 \n"
+"POT-Creation-Date: 2006-09-15 16:36+0200\n"
+"PO-Revision-Date: 2006-09-15 16:37+0200 \n"
 "Last-Translator: Wouter Bolsterlee <uws+gnome@xs4all.nl>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "MIME-Version: 1.0\n"
@@ -109,7 +109,7 @@ msgstr "Donkere kurk"
 
 #: ../data/browser.xml.h:19
 msgid "Dark GNOME"
-msgstr "Donker GNOME"
+msgstr "Donker Gnome"
 
 #: ../data/browser.xml.h:20
 msgid "Deep Teal"
@@ -167,7 +167,7 @@ msgstr "Fossiel"
 
 #: ../data/browser.xml.h:34
 msgid "GNOME"
-msgstr "GNOME"
+msgstr "Gnome"
 
 #: ../data/browser.xml.h:35
 msgid "Granite"
@@ -4323,7 +4323,7 @@ msgid ""
 "The location of the desktop directory has changed in GNOME 2.4. You can open "
 "the link and move over the files you want, then delete the link."
 msgstr ""
-"De locatie van de bureaubladmap is veranderd in GNOME 2.4.  U kunt de "
+"De locatie van de bureaubladmap is veranderd in Gnome 2.4.  U kunt de "
 "verwijzing openen om de bestanden van uw keuze te verhuizen, en deze "
 "verwijzing vervolgens verwijderen."
 
@@ -5824,13 +5824,14 @@ msgstr ""
 "Nautilus; if not, write to the Free Software Foundation, Inc., 59 Temple "
 "Place, Suite 330, Boston, MA  02111-1307  USA"
 
+# Vrij vertaald (Wouter Bolsterlee)
 #: ../src/nautilus-window-menus.c:450
 msgid ""
 "Nautilus is a graphical shell for GNOME that makes it easy to manage your "
 "files and the rest of your system."
 msgstr ""
-"Nautilus is een grafische omgeving voor GNOME die het beheer van uw "
-"bestanden en de rest van uwsysteem makkelijker maakt."
+"Nautilus maakt het beheer van uw bestanden en de rest van uw systeem "
+"gemakkelijk."
 
 # alvast naar 2006 gezet
 #: ../src/nautilus-window-menus.c:454
