Translation updated by Ivar Smolin.
2006-09-16  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-09-08 12:25+0300\n"
+"PO-Revision-Date: 2006-09-14 23:19+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -911,30 +911,30 @@ msgstr "Külgpaani laius"
 #. label, accelerator
 #: ../libnautilus-private/nautilus-clipboard.c:442
 msgid "Cut the selected text to the clipboard"
-msgstr "Lõika märgitud tekst lõikelauale"
+msgstr "Märgitud teksti lõikamine lõikelauale"
 
 #. name, stock id
 #. label, accelerator
 #: ../libnautilus-private/nautilus-clipboard.c:446
 msgid "Copy the selected text to the clipboard"
-msgstr "Kopeeri märgitud teksti lõikelauale"
+msgstr "Märgitud teksti kopeerimine lõikelauale"
 
 #. name, stock id
 #. label, accelerator
 #: ../libnautilus-private/nautilus-clipboard.c:450
 msgid "Paste the text stored on the clipboard"
-msgstr "Aseta lõikelaual hoitav tekst"
+msgstr "Lõikelaual hoitava teksti asetamine"
 
 #. name, stock id
 #: ../libnautilus-private/nautilus-clipboard.c:453
 #: ../src/file-manager/fm-directory-view.c:6840
 msgid "Select _All"
-msgstr "Märgi _kõik"
+msgstr "Vali _kõik"
 
 #. label, accelerator
 #: ../libnautilus-private/nautilus-clipboard.c:454
 msgid "Select all the text in a text field"
-msgstr "Märgi kogu tekstivälja tekst"
+msgstr "Kogu tekstivälja teksti valimine"
 
 #: ../libnautilus-private/nautilus-column-chooser.c:394
 msgid "Move _Up"
