Translation updated by Ivar Smolin.
2006-09-20  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-09-14 23:19+0300\n"
+"PO-Revision-Date: 2006-09-20 18:44+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -4234,6 +4234,9 @@ msgid ""
 "attempting to locate the shell object. Killing bonobo-activation-server and "
 "restarting Nautilus may help fix the problem."
 msgstr ""
+"Nautilust pole hetkel võimalik Bonobo ootamatu vea tõttu kasutada. Viga "
+"tekkis kestobjekti asukoha määramise katsel. Bonobo-activation-server'i "
+"kõrvaldamine ja Nautiluse taaskäivitamine võib aidata vea kõrvaldamisel."
 
 #: ../src/nautilus-bookmarks-window.c:158
 #: ../src/nautilus-file-management-properties.c:216
@@ -4774,7 +4777,7 @@ msgstr "Säriaeg"
 
 #: ../src/nautilus-image-properties-page.c:239
 msgid "ISO Speed Rating"
-msgstr ""
+msgstr "ISO tundlikkus"
 
 #: ../src/nautilus-image-properties-page.c:240
 msgid "Software"
@@ -4884,7 +4887,7 @@ msgstr "GEOMETRY"
 
 #: ../src/nautilus-main.c:210
 msgid "Only create windows for explicitly specified URIs."
-msgstr ""
+msgstr "Aknad luuakse ainult määratud URI-dele."
 
 #: ../src/nautilus-main.c:212
 msgid ""
@@ -5140,7 +5143,7 @@ msgstr "Liigu ajaloos edasi"
 
 #: ../src/nautilus-navigation-window.c:177
 msgid "Toggle between button and text-based location bar"
-msgstr ""
+msgstr "Nuppudel ja tekstil põhineva asukohariba vahel lülitumine"
 
 #: ../src/nautilus-navigation-window.c:906
 #, c-format
