Translation updated by Ivar Smolin.
2006-09-25  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-09-20 18:44+0300\n"
+"PO-Revision-Date: 2006-09-25 10:58+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -855,6 +855,10 @@ msgid ""
 "\"ask\" to ask what to do via a dialog, and \"display\" to display them as "
 "text files."
 msgstr ""
+"Mida tehakse käivitatavate tekstifailidega nende aktiveerimisel (üksiku või "
+"topeltklõpsuga). Võimalikud väärtused on \"launch\" nende programmina "
+"käivitamiseks, \"ask\" küsimusedialoogi kuvamiseks ja \"display\" nende "
+"tekstifailina kuvamiseks."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:101
 msgid ""
@@ -877,11 +881,11 @@ msgstr "Millal näidata pildifailidel pisipilte"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:105
 msgid "Whether a custom default folder background has been set."
-msgstr ""
+msgstr "Kas kausta vaikimisi taust on seatud või mitte."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:106
 msgid "Whether a custom default side pane background has been set."
-msgstr ""
+msgstr "Kas külgpaani vaikimisi taust on seatud või mitte."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:107
 msgid "Whether to ask for confirmation when moving files to trash"
@@ -4175,6 +4179,9 @@ msgid ""
 "console may fix the problem. If not, you can try rebooting the computer or "
 "installing Nautilus again."
 msgstr ""
+"Nautilust pole praegu võimalik kasutada. Käsu \"bonobo-slay\" konsoolilt "
+"kävitamine võib selle olukorra lahendada. Kui probleem säilib, siis võib "
+"proovida arvuti alglaadimist või Nautiluse uuestipaigaldamist."
 
 #. FIXME bugzilla.gnome.org 42536: The guesses and stuff here are lame.
 #: ../src/nautilus-application.c:548
