Updated Catalan translation.

--- a/po/ca.po
+++ b/po/ca.po
@@ -2130,7 +2130,7 @@ msgstr "enllaç (trencat)"
 #: ../libnautilus-private/nautilus-global-preferences.c:532
 #: ../libnautilus-private/nautilus-trash-directory.c:353
 msgid "Trash"
-msgstr "paperera"
+msgstr "Paperera"
 
 #: ../libnautilus-private/nautilus-global-preferences.c:70
 msgid "_Always"
