Updated Italian translation.
2006-09-27  Luca Ferretti  <elle.uca@libero.it>

	* it.po: Updated Italian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-27  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Updated Italian translation.
+
 2006-09-26  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
