--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-28  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated.
+
 2006-09-27  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
