--- a/po/et.po
+++ b/po/et.po
@@ -16,8 +16,8 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-09-25 10:58+0300\n"
-"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
+"PO-Revision-Date: 2006-09-28 08:56+0300\n"
+"Last-Translator: Priit Laes <amd@store20.com>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2817,6 +2817,15 @@ msgid ""
 "extension for \"%s\", then open the file normally. Alternatively, use the "
 "Open With menu to choose a specific application for the file. "
 msgstr ""
+"Failinimi \"%s\" näitab, et selle faili tüüp on \"%s\". Faili sisu näitab, "
+"et selle faili tüüp on \"%s\". Kui sa selle faili avad, siis võib see fail "
+"osutuda sinu süsteemile turvariskiks.\n"
+"\n"
+"Ära seda faili ava kui see fail pole sinu enda loodud või saadud "
+"usaldusväärsest allikast. Enne faili avamist nimeta see ümber tüübile "
+"\"%s\" sobiliku laiendiga ja ava seejärel juba tavapärasel moel. "
+"Alternatiivina võid kasutada \"Ava programmiga\" menüüd ja valida faili "
+"avamiseks sobilik rakendus."
 
 #: ../src/file-manager/fm-directory-view.c:5363
 #, c-format
@@ -5634,9 +5643,9 @@ msgstr ""
 "Lauri Kasvandik <lauri.kasvandik@mail.ee>, 2002.\n"
 "Tõivo Leedjärv <toivo@linux.ee>, 2003. \n"
 "Allan Sims <allsi@eau.ee>, 2003.\n"
+"Sven Sapelson <sven.sapelson@gmail.com>, 2005.\n"
 "Priit Laes <amd@store20.com>, 2004-2006.\n"
-"Ivar Smolin <okul@linux.ee>, 2005, 2006.\n"
-"Sven Sapelson <sven.sapelson@gmail.com>, 2005."
+"Ivar Smolin <okul@linux.ee>, 2005, 2006"
 
 #: ../src/nautilus-window-menus.c:597
 msgid "_File"
