Translation updated by Ivar Smolin.
2006-10-02  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -11,13 +11,16 @@
 # Ivar Smolin <okul@linux.ee>, 2005, 2006.
 # Sven Sapelson <sven.sapelson@gmail.com>, 2005.
 #
+# FIXME - selles tõlkes tuleks kontrollida, et failirekvisiitide "modified" ja
+# "changed" poleks omavahel sassi aetud.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-09-28 08:56+0300\n"
-"Last-Translator: Priit Laes <amd@store20.com>\n"
+"PO-Revision-Date: 2006-09-29 07:47+0300\n"
+"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -311,6 +314,12 @@ msgid ""
 "\", \"owner\", \"group\", \"permissions\", \"octal_permissions\" and "
 "\"mime_type\"."
 msgstr ""
+"Ikoonivaates olevate ikoonipealkirjade loetelu. Võimalikud väärtused on "
+"\"size\" (suurus), \"type\" (tüüp), \"date_modified\" (viimase muutmise "
+"aeg), \"date_changed\" (omaduste viimase muutmise aeg), \"date_accessed\" "
+"(viimase kasutamise aeg), \"owner\" (omanik), \"group\" (omanikgrupp), "
+"\"permissions\" (pääsuõigused), \"octal_permissions\" (pääsuõigused "
+"kaheksandsüsteemis) ja \"mime_type\" (mime-tüüp)."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:2
 msgid "Always use the location entry, instead of the pathbar"
@@ -2821,9 +2830,9 @@ msgstr ""
 "et selle faili tüüp on \"%s\". Kui sa selle faili avad, siis võib see fail "
 "osutuda sinu süsteemile turvariskiks.\n"
 "\n"
-"Ära seda faili ava kui see fail pole sinu enda loodud või saadud "
-"usaldusväärsest allikast. Enne faili avamist nimeta see ümber tüübile "
-"\"%s\" sobiliku laiendiga ja ava seejärel juba tavapärasel moel. "
+"Ära seda faili ennem ava kui see fail pole sinu enda loodud või saadud "
+"usaldusväärsest allikast. Enne faili avamiset nimeta see ümber tüübile "
+"\"%s\" sobiliku laiendiga ja ava see siis juba tavapärasel moel. "
 "Alternatiivina võid kasutada \"Ava programmiga\" menüüd ja valida faili "
 "avamiseks sobilik rakendus."
 
@@ -2870,6 +2879,26 @@ msgid ""
 "\n"
 "NAUTILUS_SCRIPT_WINDOW_GEOMETRY: position and size of current window"
 msgstr ""
+"Kõik selles kataloogis olevad käivitatavad failid ilmuvad Skriptide "
+"menüüsse. Menüüst skripti valides käivitatakse see skript.\n"
+"\n"
+"Kui käivitatakse kohalikust kataloogist, siis edastatakse skriptidele "
+"valitud failide nimed. Kui skript käivitatakse võrgukataloogist (näiteks "
+"veebi või ftp sisu näitavast kataloogist), siis skriptile parameetreid "
+"ei edastata.\n"
+"\n"
+"Kõikide ülalkirjeldatud juhtumite korral edastab Nautilus skriptile "
+"järgnevad keskkonnamuutujad:\n"
+"\n"
+"NAUTILUS_SCRIPT_SELECTED_FILE_PATHS: valitud failide kohta reavahetustega "
+"eraldatud radade loetelu (kui need on kohalikud)\n"
+"\n"
+"NAUTILUS_SCRIPT_SELECTED_URIS: valitud failide kohta reavahetustega "
+"eraldatud URI-de loetelu\n"
+"\n"
+"NAUTILUS_SCRIPT_CURRENT_URI: käesoleva asukoha URI\n"
+"\n"
+"NAUTILUS_SCRIPT_WINDOW_GEOMETRY: käesoleva akna suurus ja asukoht"
 
 #: ../src/file-manager/fm-directory-view.c:5983
 #: ../src/file-manager/fm-tree-view.c:901
@@ -5645,7 +5674,7 @@ msgstr ""
 "Allan Sims <allsi@eau.ee>, 2003.\n"
 "Sven Sapelson <sven.sapelson@gmail.com>, 2005.\n"
 "Priit Laes <amd@store20.com>, 2004-2006.\n"
-"Ivar Smolin <okul@linux.ee>, 2005, 2006"
+"Ivar Smolin <okul@linux.ee>, 2005, 2006."
 
 #: ../src/nautilus-window-menus.c:597
 msgid "_File"
