--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-02  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-navigation-window.c (search_bar_activate_callback):
+	In non-indexed mode, start at current dir.
+
 2006-09-27  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-directory.c:
