Update for release
2006-10-02  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

	* configure.in:
	Bump to 2.16.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2006-10-02  Alexander Larsson  <alexl@redhat.com>
 
+	* NEWS:
+	Update for release
+
+	* configure.in:
+	Bump to 2.16.1
+
+2006-10-02  Alexander Larsson  <alexl@redhat.com>
+
 	* src/nautilus-navigation-window.c (search_bar_activate_callback):
 	In non-indexed mode, start at current dir.
 
