--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Major changes in 2.16.1 are:
+* Default to search in current directory for non-indexed search
+* Fix clash with symbol names in gtk+
+
 Major changes in 2.16.0 are:
 * Handle enter activation when using typeahead search
 * Avoid using gnome_vfs_is_local in wrong places
