--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2006-10-02  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.16.1 ===
+	
+2006-10-02  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release
 
