Translation updated by Ivar Smolin.
2006-10-04  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-04  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 === nautilus 2.16.1 ===
 	
 2006-10-02  Priit Laes  <plaes@cvs.gnome.org>
