--- a/po/et.po
+++ b/po/et.po
@@ -4242,6 +4242,23 @@ msgid ""
 "We have also seen this error when a faulty version of bonobo-activation was "
 "installed."
 msgstr ""
+"Nautilust pole praegu võimalik kasutada. Käsu \"bonobo-slay\" konsoolilt "
+"kävitamine võib selle olukorra lahendada. Kui probleem säilib, siis võib "
+"proovida arvuti alglaadimist või Nautiluse uuestipaigaldamist."
+"\n"
+"Bonobo ei suuda leida faili Nautilus_shell.server. Üks põhjus võib olla see, "
+"et LD_LIBRARY_PATH ei sisalda bonobo-activation teegi kataloogi. Teine "
+"põhjus võib olla see, et fail Nautilus_shell.server puudub vigase paigalduse "
+"tõttu.\n"
+"\n"
+"Käsk \"bonobo-slay\" kõrvaldab kõik Bonobo Aktiveerimise ja GConf'i "
+"protsessid, need aga võivad olla teistele rakendustele vajalikud.\n"
+"\n"
+"Mõnikord likvideerib bonobo-activation-server'i ja gconfd kõrvaldamine "
+"probleemi aga pole täpselt teada, miks.\n"
+"\n"
+"See probleem on tekkinud ka olukorras, kus bonobo-activation'ist on "
+"paigaldatud vigane versioon."
 
 #. Some misc. error (can never happen with current
 #. * version of bonobo-activation). Show dialog and terminate the
