--- a/po/et.po
+++ b/po/et.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-09-29 07:47+0300\n"
+"PO-Revision-Date: 2006-10-05 12:04+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -1207,7 +1207,8 @@ msgstr "Viga ümbertõstmisel."
 #: ../libnautilus-private/nautilus-file-operations.c:671
 #, c-format
 msgid "\"%s\" cannot be moved because it is on a read-only disk."
-msgstr "\"%s\" pole võimalik ümber tõsta kuna asub kirjutuskaitsega kettal."
+msgstr ""
+"\"%s\" pole võimalik ümber tõsta, kuna see asub kirjutuskaitsega kettal."
 
 #: ../libnautilus-private/nautilus-file-operations.c:681
 #: ../libnautilus-private/nautilus-file-operations.c:687
@@ -2003,7 +2004,7 @@ msgstr "%s (%lld baiti)"
 #: ../libnautilus-private/nautilus-file.c:4700
 #: ../libnautilus-private/nautilus-file.c:4716
 msgid "? items"
-msgstr "? elementi"
+msgstr "? kirjet"
 
 #. This means no contents at all were readable
 #: ../libnautilus-private/nautilus-file.c:4706
@@ -2356,7 +2357,7 @@ msgstr "Ligipääs oli keelatud."
 #: ../src/nautilus-window-manage-views.c:1478
 #, c-format
 msgid "Couldn't display \"%s\", because no host \"%s\" could be found."
-msgstr "\"%s\" pole võimalik kuvada kuna hosti \"%s\" pole võimalik leida."
+msgstr "\"%s\" pole võimalik kuvada, kuna hosti \"%s\" pole võimalik leida."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:613
 #: ../src/nautilus-window-manage-views.c:1481
@@ -2507,7 +2508,7 @@ msgstr ""
 
 #: ../src/Nautilus_shell.server.in.h:6
 msgid "Produces metafile objects for accessing Nautilus metadata"
-msgstr "Nautiluse metaandmetele ligipääsuks metafailiobjektide tegemine"
+msgstr "Metafailiobjektide tegemine Nautiluse metaandmetele ligipääsuks"
 
 #: ../src/file-manager/fm-desktop-icon-view.c:617
 msgid "Background"
@@ -2585,7 +2586,7 @@ msgstr "Selle asukoha kuvamine töölauavaatena."
 
 #: ../src/file-manager/fm-directory-view.c:665
 msgid "Are you sure you want to open all files?"
-msgstr "Kas oled kindel, et soovid avada kõik failid?"
+msgstr "Oled kindel, et soovid avada kõik failid?"
 
 #: ../src/file-manager/fm-directory-view.c:666
 #: ../src/nautilus-location-bar.c:154
@@ -2598,15 +2599,15 @@ msgstr[1] "See avab %d eraldi akent."
 #: ../src/file-manager/fm-directory-view.c:991
 #, c-format
 msgid "Are you sure you want to permanently delete \"%s\"?"
-msgstr "Kas oled kindel, et soovid \"%s\" jäädavalt kustutada?"
+msgstr "Oled kindel, et soovid \"%s\" jäädavalt kustutada?"
 
 #: ../src/file-manager/fm-directory-view.c:995
 #, c-format
 msgid "Are you sure you want to permanently delete the %d selected item?"
 msgid_plural ""
 "Are you sure you want to permanently delete the %d selected items?"
-msgstr[0] "Kas oled kindel, et soovid %d valitud elemendi jäädavalt kustutada?"
-msgstr[1] "Kas oled kindel, et soovid %d valitud elementi jäädavalt kustutada?"
+msgstr[0] "Oled kindel, et soovid %d valitud kirje jäädavalt kustutada?"
+msgstr[1] "Oled kindel, et soovid %d valitud kirjet jäädavalt kustutada?"
 
 #: ../src/file-manager/fm-directory-view.c:1006
 msgid "If you delete an item, it is permanently lost."
@@ -2629,7 +2630,7 @@ msgstr "_Muster:"
 
 #: ../src/file-manager/fm-directory-view.c:1304
 msgid "Save Search as"
-msgstr "Salvesta otsing kui"
+msgstr "Otsingu salvestamine faili"
 
 #: ../src/file-manager/fm-directory-view.c:1322
 msgid "Search _name:"
@@ -2745,7 +2746,7 @@ msgstr "Ühtegi %d'st valitud kirjest pole võimalik prügikasti tõsta"
 msgid ""
 "Cannot move some items to trash, do you want to delete these immediately?"
 msgstr ""
-"Mõningaid elemente pole võimalik prügikasti tõsta. Kas soovid neid koheselt "
+"Mõningaid kirjeid pole võimalik prügikasti tõsta. Kas soovid neid koheselt "
 "kustutada?"
 
 #: ../src/file-manager/fm-directory-view.c:3797
@@ -2756,7 +2757,7 @@ msgstr "%d valitud kirjet pole võimalik prügikasti tõsta"
 #: ../src/file-manager/fm-directory-view.c:3835
 #, c-format
 msgid "Are you sure you want to permanently delete \"%s\" from the trash?"
-msgstr "Kas oled kindel, et soovid \"%s\" prügikastist jäädavalt kustutada?"
+msgstr "Oled kindel, et soovid \"%s\" prügikastist jäädavalt kustutada?"
 
 #: ../src/file-manager/fm-directory-view.c:3839
 #, c-format
@@ -2856,7 +2857,7 @@ msgid ""
 "as input."
 msgstr ""
 "Menüüst skripti valides käivitatakse see valitud kirjel kasutades "
-"sisendparameetrina valitud elemendi nime."
+"sisendparameetrina valitud kirje nime."
 
 #: ../src/file-manager/fm-directory-view.c:5822
 msgid ""
@@ -2958,7 +2959,7 @@ msgstr "Ava _programmiga..."
 #. name, stock id, label
 #: ../src/file-manager/fm-directory-view.c:6766
 msgid "Choose a program with which to open the selected item"
-msgstr "Vali programm millega avada valitud element"
+msgstr "Vali programm, millega valitud kirje avada"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6768
@@ -3083,8 +3084,8 @@ msgid ""
 "Move or copy files previously selected by a Cut or Copy command into the "
 "selected folder"
 msgstr ""
-"Liigutab või asetab valitud kataloogi failid, mis on eelnevalt valitud "
-"käskudega Lõika fail või Kopeeri fail"
+"Eelnevalt käskudega Lõika/Kopeeri fail valitud failide valitud kataloogi "
+"ümbertõstmine või kopeerimine"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6841
@@ -3110,7 +3111,7 @@ msgstr "_Tee duplikaat"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6849
 msgid "Duplicate each selected item"
-msgstr "Dubleeri kõik valitud elemendid"
+msgstr "Kõigi valitud kirjete dubleerimine"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6852
@@ -3123,7 +3124,7 @@ msgstr[1] "Tee _viidad"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6853
 msgid "Create a symbolic link for each selected item"
-msgstr "Loo igale valitud kirjele sümboolne link"
+msgstr "Igale valitud kirjele nimeviida loomine"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6856
@@ -3133,7 +3134,7 @@ msgstr "_Nimeta ümber..."
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6857
 msgid "Rename selected item"
-msgstr "Nimeta valitud element ümber"
+msgstr "Valitud kirje ümbernimetamine"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6864
@@ -3148,7 +3149,7 @@ msgstr "_Tõsta prügikasti"
 #: ../src/file-manager/fm-directory-view.c:6865
 #: ../src/file-manager/fm-directory-view.c:7715
 msgid "Move each selected item to the Trash"
-msgstr "Tõsta kõik märgitud kirjed prügikasti"
+msgstr "Kõigi märgitud kirjete tõstmine prügikasti"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6868
@@ -3182,7 +3183,7 @@ msgstr "Ühendu sellesse võrguserverisse"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6877
 msgid "Make a permanent connection to this server"
-msgstr "Loo selle serveriga pidev ühendus"
+msgstr "Selle serveriga pideva ühenduse loomine"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6880
@@ -3193,7 +3194,7 @@ msgstr "_Ühenda kettaseade"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6881
 msgid "Mount the selected volume"
-msgstr "Ühenda valitud kettaseade"
+msgstr "Valitud kettaseadme ühendamine"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6884
@@ -3205,7 +3206,7 @@ msgstr "_Ühenda kettaseade lahti"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6885
 msgid "Unmount the selected volume"
-msgstr "Katkesta ühendus valitud kettaseadmega"
+msgstr "Ühenduse katkestamine valitud kettaseadmega"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6888
@@ -3217,7 +3218,7 @@ msgstr "_Väljasta"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6889
 msgid "Eject the selected volume"
-msgstr "Katkesta ühendus valitud kettaseadmega."
+msgstr "Valitud seadme väljastamine"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6892
@@ -3229,7 +3230,7 @@ msgstr "_Vorming"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6893
 msgid "Format the selected volume"
-msgstr "Vorminda valitud kettaseade"
+msgstr "Valitud kettaseadme vormindamine"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6897
@@ -3264,7 +3265,7 @@ msgstr "_Salvesta otsing"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6917
 msgid "Save the edited search"
-msgstr "Salvesta muudetud otsing"
+msgstr "Muudetud otsingu salvestamine"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6920
@@ -3274,12 +3275,12 @@ msgstr "S_alvesta otsing kui..."
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6921
 msgid "Save the current search as a file"
-msgstr "Salvesta praegune otsing failina"
+msgstr "Praegune otsingu salvestamine failina"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6927
 msgid "Open this folder in a navigation window"
-msgstr "Ava kaust navigeerimisaknas"
+msgstr "Kausta avamine navigeerimisaknas"
 
 #. name, stock id
 #. label, accelerator
@@ -3291,17 +3292,17 @@ msgstr "Avatud kausta ettevalmistamine prügikasti tõstmiseks Aseta käsuga"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6936
 msgid "Prepare this folder to be copied with a Paste command"
-msgstr "Valmistab selle kausta ette kopeerimiseks Aseta käsuga"
+msgstr "Selle kausta ettevalmistamine kopeerimiseks Aseta käsuga"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6941
 msgid "Move this folder to the Trash"
-msgstr "Tõsta see kaust prügikasti"
+msgstr "Selle kausta tõstmine prügikasti"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6945
 msgid "Delete this folder, without moving to the Trash"
-msgstr "Kustuta see kaust ilma, et see prügikasti tõstetaks"
+msgstr "Selle kausta kustutamine ilma prügikasti tõstmata"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6951
@@ -3311,7 +3312,7 @@ msgstr "Kuva _peidetud failid"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6952
 msgid "Toggle the display of hidden files in the current window"
-msgstr "Lülitab peidetud failide näitamise käesolevas aknas sisse/välja"
+msgstr "Peidetud failide näitamise käesolevas aknas sisse- ja väljalülitamine"
 
 #. Translators: %s is a directory
 #: ../src/file-manager/fm-directory-view.c:7038
@@ -3365,7 +3366,7 @@ msgstr[1] "Ava %d uues aknas"
 
 #: ../src/file-manager/fm-directory-view.c:7711
 msgid "Delete all selected items permanently"
-msgstr "Kustutab kõik elemendid lõplikult"
+msgstr "Kõigi kirjete lõplik kustutamine"
 
 #: ../src/file-manager/fm-directory-view.c:8083
 #, c-format
@@ -3375,17 +3376,17 @@ msgstr "Viit \"%s\" on katki."
 #: ../src/file-manager/fm-directory-view.c:8085
 #, c-format
 msgid "The Link \"%s\" is Broken. Move it to Trash?"
-msgstr "Link on \"%s\" on kakti. Kas tõsta see prügikasti?"
+msgstr "Viit \"%s\" on kakti. Kas tõsta see prügikasti?"
 
 #: ../src/file-manager/fm-directory-view.c:8091
 msgid "This link can't be used, because it has no target."
-msgstr "Seda viita pole võimalik kasutada, sest sellel ei ole sihtkohta."
+msgstr "Seda viita pole võimalik kasutada, kuna sellel pole sihtkohta."
 
 #: ../src/file-manager/fm-directory-view.c:8093
 #, c-format
 msgid "This link can't be used, because its target \"%s\" doesn't exist."
 msgstr ""
-"Seda viita pole võimalik kasutada, sest sihtkohta \"%s\" ei ole olemas."
+"Seda viita pole võimalik kasutada, kuna sihtkohta \"%s\" pole olemas."
 
 #: ../src/file-manager/fm-directory-view.c:8716
 #, c-format
@@ -3396,8 +3397,8 @@ msgstr "\"%s\" avamine."
 #, c-format
 msgid "Opening %d item."
 msgid_plural "Opening %d items."
-msgstr[0] "Avatakse %d element."
-msgstr[1] "Avatakse %d elementi."
+msgstr[0] "Avatakse %d kirje."
+msgstr[1] "Avatakse %d kirjet."
 
 #: ../src/file-manager/fm-directory-view.c:9611
 msgid "Download location?"
@@ -3423,13 +3424,12 @@ msgstr "Pukseerimine ei ole toetatud."
 
 #: ../src/file-manager/fm-directory-view.c:9685
 msgid "Drag and drop is only supported on local file systems."
-msgstr ""
-"Lohistamine ja paigutamine on võimalik vaid kohaliku failisüsteemi ulatuses."
+msgstr "Pukseerimine on võimalik vaid kohaliku failisüsteemi ulatuses."
 
 #: ../src/file-manager/fm-directory-view.c:9737
 #: ../src/file-manager/fm-directory-view.c:9838
 msgid "An invalid drag type was used."
-msgstr "Kasutati vale lohistamisliiki"
+msgstr "Kasutati vale lohistamisliiki."
 
 #: ../src/file-manager/fm-ditem-page.c:337
 #: ../src/file-manager/fm-ditem-page.c:348
@@ -3511,7 +3511,7 @@ msgstr "Nimi \"%s\" ei sobi. Palun vali teine nimi."
 #: ../src/file-manager/fm-error-reporting.c:132
 #, c-format
 msgid "Couldn't change the name of \"%s\" because it is on a read-only disk"
-msgstr "\"%s\" nime pole võimalik muuta kuna see asub kirjutuskaitsega kettal"
+msgstr "\"%s\" nime pole võimalik muuta, kuna see asub kirjutuskaitsega kettal"
 
 #: ../src/file-manager/fm-error-reporting.c:141
 #, c-format
@@ -3532,7 +3532,7 @@ msgstr "Sul puuduvad vajalikud õigused grupi \"%s\" muutmiseks."
 #, c-format
 msgid "Couldn't change the group of \"%s\" because it is on a read-only disk"
 msgstr ""
-"\"%s\" gruppi pole võimalik muuta kuna see asub kirjutuskaitsega kettal"
+"\"%s\" gruppi pole võimalik muuta, kuna see asub kirjutuskaitsega kettal"
 
 #: ../src/file-manager/fm-error-reporting.c:180
 #, c-format
@@ -3547,7 +3547,7 @@ msgstr "Gruppi pole võimalik muuta."
 #, c-format
 msgid "Couldn't change the owner of \"%s\" because it is on a read-only disk"
 msgstr ""
-"\"%s\" omanikku pole võimalik muuta kuna see asub kirjutuskaitsega kettal"
+"\"%s\" omanikku pole võimalik muuta, kuna see asub kirjutuskaitsega kettal"
 
 #: ../src/file-manager/fm-error-reporting.c:213
 #, c-format
@@ -3563,7 +3563,7 @@ msgstr "Omanikku pole võimalik muuta."
 msgid ""
 "Couldn't change the permissions of \"%s\" because it is on a read-only disk"
 msgstr ""
-"\"%s\" õiguseid pole võimalik muuta kuna see asub kirjutuskaitsega kettal"
+"\"%s\" õiguseid pole võimalik muuta, kuna see asub kirjutuskaitsega kettal"
 
 #: ../src/file-manager/fm-error-reporting.c:245
 #, c-format
@@ -3887,7 +3887,7 @@ msgstr[0] "_Nimi:"
 msgstr[1] "_Nimed:"
 
 #: ../src/file-manager/fm-properties-window.c:2305
-msgid "Type:"
+msgid "Type:update"
 msgstr "Liik:"
 
 #: ../src/file-manager/fm-properties-window.c:2307
@@ -3990,15 +3990,15 @@ msgstr "ligipääs"
 
 #: ../src/file-manager/fm-properties-window.c:3189
 msgid "Access:"
-msgstr "Ligipääs:"
+msgstr "Pääsuõigused:"
 
 #: ../src/file-manager/fm-properties-window.c:3191
 msgid "Folder Access:"
-msgstr "Kausta ligipääs:"
+msgstr "Kausta pääsuõigused:"
 
 #: ../src/file-manager/fm-properties-window.c:3193
 msgid "File Access:"
-msgstr "Faili ligipääs:"
+msgstr "Faili pääsuõigused:"
 
 #: ../src/file-manager/fm-properties-window.c:3205
 #: ../src/file-manager/fm-properties-window.c:3216
@@ -4279,6 +4279,8 @@ msgid ""
 "Nautilus can't be used now, due to an unexpected error from Bonobo when "
 "attempting to register the file manager view server."
 msgstr ""
+"Nautilust pole võimalik praegu kasutada kuna failihalduri vaaturserveri "
+"Bonobo'sse registreerimisel tekkis ootamatu viga."
 
 #: ../src/nautilus-application.c:597
 msgid ""
@@ -4398,7 +4400,7 @@ msgstr "_Server:"
 
 #: ../src/nautilus-connect-server-dialog.c:510
 msgid "Optional information:"
-msgstr "Valikuline teave:"
+msgstr "Valikulised andmed:"
 
 #: ../src/nautilus-connect-server-dialog.c:522
 msgid "_Share:"
@@ -4418,7 +4420,7 @@ msgstr "_Domeeninimi:"
 
 #: ../src/nautilus-connect-server-dialog.c:628
 msgid "_Name to use for connection:"
-msgstr "_Nimi, mida ühenduseks kasutada:"
+msgstr "Ühendumiseks kasutatav _nimi:"
 
 #: ../src/nautilus-connect-server-dialog.c:805
 msgid "Connect to Server"
@@ -4636,7 +4638,7 @@ msgstr "Avatakse alati si_rvija aknas"
 #: ../src/nautilus-file-management-properties.glade.h:36
 msgid "Ask before _emptying the Trash or deleting files"
 msgstr ""
-"Kasutajatelt _küsitakse luba prügikasti tühjendamisel ja failide kustutamisel"
+"_Prügikasti tühjendamisel ja failide kustutamisel küsitakse Kasutajatelt luba"
 
 #: ../src/nautilus-file-management-properties.glade.h:37
 msgid "Behavior"
@@ -4758,7 +4760,7 @@ msgstr "Ainult _failidele, mis on väiksemad kui:"
 
 #: ../src/nautilus-file-management-properties.glade.h:68
 msgid "_Run executable text files when they are clicked"
-msgstr "_Käivitatavad tekstifailid käivitatakse, kui neile klõpsatakse"
+msgstr "Käivitatavatele teksti_failidele klõpsates need käivitatakse"
 
 #: ../src/nautilus-file-management-properties.glade.h:69
 msgid "_Single click to activate items"
@@ -4774,7 +4776,7 @@ msgstr "Kasutatakse kom_paktset paigutust"
 
 #: ../src/nautilus-file-management-properties.glade.h:72
 msgid "_View executable text files when they are clicked"
-msgstr "_Käivitatavate tekstifailide sisu näitamine, kui neile klõpsatakse"
+msgstr "Käi_vitatavatele tekstifailidele klõpsates näidatakse nende sisu"
 
 #: ../src/nautilus-first-time-druid.c:40
 msgid ""
@@ -4866,7 +4868,7 @@ msgstr[1] "<b>Kõrgus:</b> %d pikslit\n"
 
 #: ../src/nautilus-image-properties-page.c:280
 msgid "Failed to load image information"
-msgstr "Tõrge pildi teabe laadimise"
+msgstr "Tõrge pildi andmete laadimisel"
 
 #: ../src/nautilus-image-properties-page.c:430
 msgid "loading..."
@@ -4882,7 +4884,7 @@ msgstr "Teave"
 
 #: ../src/nautilus-information-panel.c:184
 msgid "Show Information"
-msgstr "Näita teavet"
+msgstr "Andmete näitamine"
 
 #. add the reset background item, possibly disabled
 #: ../src/nautilus-information-panel.c:404
@@ -5030,7 +5032,7 @@ msgstr ""
 #.
 #: ../src/nautilus-navigation-window-menus.c:116
 msgid "Are you sure you want to forget history?"
-msgstr "Kas oled kindel, et soovid ajaloo unustada?"
+msgstr "Oled kindel, et soovid ajaloo unustada?"
 
 #: ../src/nautilus-navigation-window-menus.c:117
 msgid "If you do, you will be doomed to repeat it."
@@ -5038,7 +5040,7 @@ msgstr "Kui sa teed, siis jäädki seda tegema."
 
 #: ../src/nautilus-navigation-window-menus.c:119
 msgid "Are you sure you want to clear the list of locations you have visited?"
-msgstr "Kas oled kindel, et tahad oma külastatud asukohtade loendi tühjendada?"
+msgstr "Oled kindel, et tahad oma külastatud asukohtade loendi tühjendada?"
 
 #: ../src/nautilus-navigation-window-menus.c:121
 msgid "If you clear the list of locations, they will be permanently deleted."
@@ -5471,7 +5473,7 @@ msgstr "Tekstifail"
 
 #: ../src/nautilus-query-editor.c:551
 msgid "Select type"
-msgstr "Vali liik"
+msgstr "Liigi valimine"
 
 #: ../src/nautilus-query-editor.c:635
 msgid "Any"
@@ -5499,7 +5501,7 @@ msgstr "Otsingule uue otsingukriteeriumi lisamine"
 
 #: ../src/nautilus-query-editor.c:1031
 msgid "Go"
-msgstr "Liikumine"
+msgstr "Otsi"
 
 #: ../src/nautilus-query-editor.c:1033
 msgid "Reload"
@@ -5507,7 +5509,7 @@ msgstr "Laadi uuesti"
 
 #: ../src/nautilus-query-editor.c:1038
 msgid "Perform or update the search"
-msgstr "Veebiotsingu teostamine või uuendamine"
+msgstr "Otsingu läbiviimine või värskendamine"
 
 #: ../src/nautilus-query-editor.c:1058
 msgid "<b>_Search for:</b>"
@@ -5613,7 +5615,7 @@ msgid ""
 "Couldn't display \"%s\", because Nautilus cannot contact the SMB master "
 "browser."
 msgstr ""
-"\"%s\" kuvamine pole võimalik kuna Nautilus ei saa ühendust SMB master "
+"\"%s\" kuvamine pole võimalik, kuna Nautilus ei saa ühendust SMB master "
 "browser'iga."
 
 #: ../src/nautilus-window-manage-views.c:1496
