Translation updated by Ivar Smolin.
2006-10-07  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-10-05 12:04+0300\n"
+"PO-Revision-Date: 2006-10-06 11:11+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -987,8 +987,8 @@ msgid "The size of the file."
 msgstr "Faili suurus."
 
 #: ../libnautilus-private/nautilus-column-utilities.c:58
-msgid "Type"
-msgstr "Liik"
+msgid "Type:"
+msgstr "Liik:"
 
 #: ../libnautilus-private/nautilus-column-utilities.c:59
 msgid "The type of the file."
@@ -4785,6 +4785,11 @@ msgid ""
 "\n"
 "You can manually erase this file to present the druid again.\n"
 msgstr ""
+"Selle faili olemasolu näitab, et Nautiluse seadistusabiline on juba kunagi "
+"käivitatud.\n"
+"\n"
+"Kui see fail eemaldada, siis käivitatakse Nautilus järgmine kord koos "
+"seadistusabilisega.\n"
 
 #: ../src/nautilus-history-sidebar.c:281
 msgid "History"
