--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-08  Hendrik Richter  <hendrikr@gnome.org>
+
+	* de.po: Updated German translation, fix #331278.
+
 2006-10-07  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by Ivar Smolin.
