--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-09  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gl.po: Updated Galician Translation.
+
 2006-10-08  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation, fix #331278.
