Updated Slovenian translation.
2006-10-15  Matic Zgur  <mr.zgur@gmail.com>

	* sl.po: Updated Slovenian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-15  Matic Zgur  <mr.zgur@gmail.com>
+
+	* sl.po: Updated Slovenian translation.
+
 2006-10-12  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by Ivar Smolin.
