--- a/po/et.po
+++ b/po/et.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-10-12 00:41+0300\n"
+"PO-Revision-Date: 2006-10-14 23:24+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -994,8 +994,8 @@ msgid "The size of the file."
 msgstr "Faili suurus."
 
 #: ../libnautilus-private/nautilus-column-utilities.c:58
-msgid "Type"
-msgstr "Liik"
+msgid "Type:"
+msgstr "Liik:"
 
 #: ../libnautilus-private/nautilus-column-utilities.c:59
 msgid "The type of the file."
