Translation updated by Ivar Smolin.
2006-10-15  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -997,6 +997,10 @@ msgstr "Faili suurus."
 msgid "Type:"
 msgstr "Liik:"
 
+#: ../libnautilus-private/nautilus-column-utilities.c:58
+msgid "Type"
+msgstr "Liik"
+
 #: ../libnautilus-private/nautilus-column-utilities.c:59
 msgid "The type of the file."
 msgstr "Faili liik."
