--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,10 @@
 
 	* et.po: Translation updated by Ivar Smolin.
 
+2006-10-15  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2006-10-15  Matic Zgur  <mr.zgur@gmail.com>
 
 	* sl.po: Updated Slovenian translation.
