Updated Italian translation.
2006-10-16  Luca Ferretti  <elle.uca@libero.it>

	* it.po: Updated Italian translation.

--- a/po/it.po
+++ b/po/it.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: nautilus 2.13.x\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-09-27 13:27+0200\n"
-"PO-Revision-Date: 2006-09-27 13:27+0200\n"
+"PO-Revision-Date: 2006-10-16 15:36+0200\n"
 "Last-Translator: Luca Ferretti <elle.uca@libero.it>\n"
 "Language-Team: Italiano <tp@lists.linux.it>\n"
 "MIME-Version: 1.0\n"
@@ -523,10 +523,7 @@ msgstr ""
 msgid ""
 "If set to true, then Nautilus lets you edit and display file permissions in "
 "a more unix-like way, accessing some more esoteric options."
-msgstr ""
-"Se impostata a vero, è possibile modificare e visualizzare i permessi dei "
-"file in modo più simile a quello di UNIX, accederendo a opzioni più "
-"esoteriche."
+msgstr "Se impostata a vero, è possibile modificare e visualizzare i permessi dei file in modo più simile a quello di UNIX, accedendo a opzioni più esoteriche."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:40
 msgid ""
@@ -3085,7 +3082,7 @@ msgstr "File _vuoto"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6787
 msgid "Create a new empty file inside this folder"
-msgstr "Crea in questa cartella una nuovo file vuoto"
+msgstr "Crea in questa cartella un nuovo file vuoto"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6794
