Don't cause critical if slow mimetype not loaded. I was able to get that
2006-10-17  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-program-choosing.c (nautilus_launch_show_file):
	Don't cause critical if slow mimetype not loaded.
	I was able to get that with a circular symlink.
	In that case a fast mimetype should be ok.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-10-17  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-program-choosing.c (nautilus_launch_show_file):
+	Don't cause critical if slow mimetype not loaded.
+	I was able to get that with a circular symlink.
+	In that case a fast mimetype should be ok.
+
 2006-10-02  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
