--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-10-18  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-list-model.c (change_dummy_row_callback):
+	The row might have disappeared if it was removed since the
+	timeout was scheduled. Protect against this. (#336051)
+
+2006-10-18  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-file-private.h:
 	Add is_added flag to NautilusFile to make sure we always
 	send an added event to directory monitors.
