--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,25 @@
+2006-10-19  Christian Neumair  <chris@gnome-de.org>
+
+	* libnautilus-private/nautilus-customization-data.c:
+	(nautilus_customization_data_new),
+	(nautilus_customization_data_get_next_element),
+	(nautilus_customization_make_pattern_chit):
+	Handle NULL pattern chit, don't unref pattern tile in
+	make_pattern_chit.
+
+	* libnautilus-private/nautilus-file-utilities.c:
+	(nautilus_pixmap_file):
+	Bail using g_debug if pixmap couldn't be found.
+
+	* src/nautilus-emblem-sidebar.c: (nautilus_emblem_sidebar_populate):
+	Only create pixmap if path lookup succeeded.
+
+	* src/nautilus-property-browser.c: (nautilus_property_browser_init),
+	(make_drag_image), (make_color_drag_image),
+	(make_properties_from_directories), (add_reset_property),
+	(property_browser_category_button_new):
+	Handle NULL pattern chits, don't operate on NULL pixbufs.
+
 2006-10-18  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-list-view.c:
