--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-10-19  Christian Neumair  <chris@gnome-de.org>
 
+	* src/file-manager/fm-directory-view.c: (fm_directory_view_destroy):
+	Only deregister "ignore hidden file preferences" callback if it has
+	been initialized before.
+
+2006-10-19  Christian Neumair  <chris@gnome-de.org>
+
 	* libnautilus-private/nautilus-customization-data.c:
 	(nautilus_customization_data_new),
 	(nautilus_customization_data_get_next_element),
