--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-10-19  Christian Neumair  <chris@gnome-de.org>
 
+	* src/nautilus-main.c: (main):
+	Shut down eel before GnomeVFS.
+
+2006-10-19  Christian Neumair  <chris@gnome-de.org>
+
 	* src/file-manager/fm-directory-view.c: (fm_directory_view_destroy):
 	Only deregister "ignore hidden file preferences" callback if it has
 	been initialized before.
